<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_filters</name>
  <description>
    Assorted filters designed to operate on 2D planar laser scanners,
    which use the sensor_msgs/LaserScan type.
  </description>
  <version>1.8.5</version>
  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>
  <author>Tully Foote</author>
  <license>BSD</license>

  <url>http://ros.org/wiki/laser_filters</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>filters</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>laser_geometry</depend>
  <depend>angles</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
